log
Fri 18 Mar 2022 02:21:23 PM UTC: 
 tests:  0|6
total_score: 0/70
236ac6c
Fri 18 Mar 2022 02:30:50 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* lista =(list *) malloc(sizeof(lsit));
      |   ^~~~
      |   List
list.c:32:17: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   list* lista =(list *) malloc(sizeof(lsit));
      |                 ^~~~
      |                 lista
list.c:32:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   list* lista =(list *) malloc(sizeof(lsit));
      |                       ^
list.c:34:8: error: request for member ‘head’ in something not a structure or union
   34 |   lista->head = NULL;
      |        ^~
list.c:35:8: error: request for member ‘nex’ in something not a structure or union
   35 |   lista->nex = NULL;
      |        ^~
list.c:36:8: error: request for member ‘prev’ in something not a structure or union
   36 |   lista->prev = NULL;
      |        ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return lista;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2c325e8
Fri 18 Mar 2022 02:31:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* lista =(list *) malloc(sizeof(lista));
      |   ^~~~
      |   List
list.c:32:17: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   list* lista =(list *) malloc(sizeof(lista));
      |                 ^~~~
      |                 lista
list.c:32:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   list* lista =(list *) malloc(sizeof(lista));
      |                       ^
list.c:35:8: error: request for member ‘head’ in something not a structure or union
   35 |   lista->head = NULL;
      |        ^~
list.c:36:8: error: request for member ‘nex’ in something not a structure or union
   36 |   lista->nex = NULL;
      |        ^~
list.c:37:8: error: request for member ‘prev’ in something not a structure or union
   37 |   lista->prev = NULL;
      |        ^~
list.c:39:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   39 |   return lista;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c41f068
